fixed section 4 spacing

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -376,6 +376,8 @@ h5 {
         23.3333%
       );
   }
+
+
   //Section 3 begins...
   .section-3 {
     background-color: white;
@@ -406,20 +408,29 @@ h5 {
     // grid-template-columns: minmax(0, 23.63%) 67.3385% minmax(0, 9.0315%);
     grid-template-columns: minmax(0, 23.63%) auto minmax(0, 7.3%);
 
-    grid-template-rows: minmax(0, 23.333%) fit-content(2.13%) minmax(0, 6.389%) 46.8519% minmax(
-        0,
-        21.296%
-      );
+    // grid-template-rows: minmax(0, 23.333%) auto minmax(
+    //     0,
+    //     21.296%
+    //   );
+      grid-template-rows: 1.18fr auto 1fr;
+  }
+  .section-4 .content-grid {
+    grid-column: 2;
+    grid-row:2;
   }
   .section-4 .purple-small-title {
     color: white;
-    grid-column: 2;
     font-size: calc(13.6px + (34 - 13.6) * ((100vw - 768px) / (1920 - 768)));
+    padding-bottom:1.55em;
     // font-size:34px;
   }
+  .section-4 .c1 {
+    padding-bottom:0.92em;
+  }
+
   .section-4 .section-content {
     color: white;
-    grid-column: 2;
+    // grid-column: 2;
     // font-size:21px;
     font-size: calc(21px + (55 - 21) * ((100vw - 768px) / (1920 - 768)));
     // line-height:66px;
@@ -506,7 +517,7 @@ height:5em
 @media only screen and (min-width: 1024px) and (max-height: 834px) {
   .section {
     height: 100vh;
-    min-height: 60vw;
+    min-height: 40vw;
   }
 }
 @media only screen and (min-width: 1200px) {
